--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "dotenv": "^17.2.3",
+    "express": "^5.2.1",
     "pg": "^8.16.3",
     "pg-pool": "^3.10.1",
     "react": "^19.2.0",
